# ep-PML2nd

./: README.md  pyproject.toml
ch2/: adaline.py  perceptron.py  plotmap.py  sgd_adaline.py
